# Solana_Bot

./: .env.example  .gitignore  README.md  pyproject.toml  soltradbot.py
day1/: README.md  sol_scan.py
day2/: .env  README.md  sol_twitter_scan.py
day3/: .env  README.md  ws-raydiun-pool-non.py
